<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="please_input_username">请输入用户名：</string>
    <string name="please_input_password">请输入密码：</string>
    <string name="remenber_user_info">记住登录信息</string>
    <string name="login">登录</string>
    <string name="click_too_fast">点击太快，请稍后再试</string>
    <string name="sys_error">系统错误</string>
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_password">用户密码不能为空</string>
    <string name="login_sucess">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_sucess_message">用户信息验证成功</string>
    <string name="login_failed_message">用户信息验证失败</string>
    <string name="ok">确定</string>
    <string name="add_info">添加信息</string>
    <string name="del_info">删除信息</string>
    <string name="add_success">添加信息成功</string>
    <string name="del_success">删除信息成功</string>
    <string name="add_failed">添加信息失败</string>
    <string name="del_failed">删除信息失败</string>

</resources>